--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^9.1.1
+  get_it: ^9.2.0
   go_router: ^17.0.1
   iconsax_flutter: ^1.0.1
   logger: ^2.6.2
@@ -43,7 +44,7 @@ dependencies:
   provider: ^6.1.5+1
   skeletonizer: ^2.1.2
   stylish_bottom_bar: ^1.1.1
-
+  localingo: ^1.1.0
 dev_dependencies:
   flutter_lints: ^6.0.0
   flutter_test:
@@ -58,8 +59,8 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/l10n/
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
